fixed spacing

--- a/src/components/shared/DepositWithdrawInput/depositWithdrawInput.module.scss
+++ b/src/components/shared/DepositWithdrawInput/depositWithdrawInput.module.scss
@@ -82,7 +82,7 @@
 
                 span {
                     position: absolute;
-                    right: 20px;
+                    right: 15px;
                     top: 9px;
                     color: #373737c9;
                     font-size: 12px;
